--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "glsl-noise": "0.0.0",
+    "glsl-rotate": "^1.1.0",
     "normalize.css": "^8.0.1",
     "three": "^0.131.3"
   }
