--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "glsl-noise": "0.0.0",
     "glsl-rotate": "^1.1.0",
+    "nice-color-palettes": "^3.0.0",
     "normalize.css": "^8.0.1",
-    "three": "^0.131.3"
+    "three": "^0.131.3",
+    "vec2": "^1.6.1"
   }
 }
