--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "glsl-noise": "0.0.0",
     "glsl-rotate": "^1.1.0",
+    "gsap": "^3.7.1",
     "nice-color-palettes": "^3.0.0",
     "normalize.css": "^8.0.1",
     "three": "^0.131.3",
